fixed alignment of share links

--- a/one-commercial/src/components/home/featuredListing/featuredListing.sass
+++ b/one-commercial/src/components/home/featuredListing/featuredListing.sass
@@ -74,7 +74,6 @@
           align-items: center
           margin-top: 10px
         p 
-
           font-size: 0.85em !important
           margin-bottom: 30px !important
           @include edgesnap 
@@ -85,11 +84,12 @@
             line-height: 1.2em
             margin-bottom: 12px !important
         .shareLinkButtons-module--wraper--yREK-
+          display: flex
           margin-top: 15px
-        .buttonround-module--wraper--9ISmm
-          // margin-bottom: 12px
           @include tablet-phone
-            justify-content: center !important
+            align-self: center !important
+          a 
+            width: auto
           button 
             margin-bottom: 12px
             @include tablet-phone 
