--- a/one-commercial/src/components/home/servicecards.sass
+++ b/one-commercial/src/components/home/servicecards.sass
@@ -43,12 +43,12 @@
           margin-top: 0px
       &:nth-last-child(1)
         @include tablet-phone 
-          margin-bottom: 0px
+        margin-bottom: 0px
       a
         display: flex
         flex-direction: column
         align-items: center 
-        justify-content: space-between
+        // justify-content: space-between
         h4 
           text-align: center
           font-weight: $normal
