--- a/one-commercial/src/components/main.sass
+++ b/one-commercial/src/components/main.sass
@@ -23,6 +23,7 @@
 .header 
   display: flex
   align-items: center
+  justify-content: center
   --height: 140px
   height: var(--height)
   padding: 0px 15px
